generate PDF by HTML with  jinja2 and xhtml2pdf

--- a/Linguagem Python/criar pdf/jinja2 + xhtml2pdf/html para pdf/LotR page.html
+++ b/Linguagem Python/criar pdf/jinja2 + xhtml2pdf/html para pdf/LotR page.html
@@ -39,10 +39,6 @@ Um Anel para encontrá-los,</br>
 Um Anel para a todos trazer e na escuridão aprisioná-los</br>
 Na Terra de Mordor onde as Sombras se deitam.</br>
 
-    <script>
-        window.alert("Bolseiro ladrão, roubou o Precioso de nóisss!!!")
-        var amigo = window.prompt("Diga Amigo e entre")
-        window.document.write(`<h2>${amigo}</h2>`);
-    </script>
+<h2>Mellon</h2>
 </body>
 </html>
